--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,6 @@
       <!-- ============================================-->
       <!-- <section> begin ============================-->
       <section class="pt-xxl-0" id="features">
-
         <div class="container-xxl">
           <div class="row justify-content-center text-center">
             <div class="col-lg-10 col-xl-8">
@@ -170,7 +169,9 @@
       <!-- <section> begin ============================-->
       <section id="team">
         <div class="container-xxl">
-          <div class="row align-items-center">
+          <div class="row justify-content-center text-center">
+
+          <!-- <div class="row align-items-center"> -->
               <h1 class="display-5 lh-sm my-4 font-cursive">Our Team </h1>
               <p class="fs-1"></p>
             </div>
@@ -178,7 +179,7 @@
             <div class="row row-cols-3 row-cols-xl-3 g-4 mt-3 text-center">
               <div class="col-12 col-md-6">
                   <div class="card py-md-3 px-md-3 mt-1 h-30 box-shadow-all border-0">
-                    <h3> Principal Investigators </h3>
+                    <h1 class="mb-4 pb-2">Principal Investigators</h1>
                   <div class="card-body"><img src="assets/img/people/puwang.jpg" alt="" height="200" />
                     <h3 class="py-3">Dr. Pu Wang</h3>
                     <h4> Assistant Professor </h4>
@@ -196,9 +197,9 @@
                 </div>
               </div>
               
-            <div class="col-md-6 col-xl-4 offset-xl-1">
+            <div class="col-md-6 col-xl-6 offset-xl-1">
               <div class="card box-shadow-rb my-4">
-                <div class="card-body my-3 mx-4">
+                <div class="card-body my-6 mx-4">
                   <h1 class="mb-4 pb-2">Members</h1>
                   <div class="d-flex align-items-center mt-3"><img class="rounded-circle" src="assets/img/people/prabhu.jpg" alt="" height=200" />
                     <div class="ms-3">
@@ -217,7 +218,7 @@
                   <div class="d-flex align-items-center mt-3"><img class="rounded-circle" src="assets/img/people/ahan.jpg" alt="" height="200" />
                     <div class="ms-3">
                       <h4>Ahan Kak</h4>
-                      <p class="mb-0">Pursuing PhD, GATECH</p>
+                      <p class="mb-0">Pursuing PhD in Electrical Engineering, GATECH</p>
                       <p class="mb-0">Lead - Developer</p>
                     </div>
                   </div>
@@ -235,26 +236,41 @@
 
       <!-- ============================================-->
       <!-- <section> begin ============================-->
-      <section id="projects">
-        <div class="container-xxl">
-          <div class="row align-items-center">
-              <h1 class="display-5 lh-sm my-4 font-cursive">Our Projects </h1>
-              <p class="fs-1"></p>
+
+        <section class="pt-xxl-0" id="projects">
+          <div class="container-xxl">
+            <div class="row justify-content-center text-center">
+              <div class="col-lg-10 col-xl-8">
+              <h1 class="display-6 font-cursive">Our Projects</h1>
             </div>
             
             <div class="row row-cols-1 row-cols-xl-3 g-4 mt-3 text-center">
               <div class="col-12 col-md-6">
-                  <div class="card py-md-3 px-md-1 mt-1 h-30 box-shadow-all border-0">
-                  <div class="card-body"><img src="assets/img/project/winos.png" alt="" style="height:50%;" />
+                <div class="card py-md-3 px-md-1 mt-1 h-30 box-shadow-all border-0">        
+                  <div class="card-body"><img src="assets/img/project/winos.png" alt="" width="400" height="500" />
+                    <h2 class="py-4">WiNOS</h2>
                   </div>
                 </div>
               </div>
-            </div>
 
-              <div class="row row-cols-1 row-cols-xl-3 g-4 mt-3 text-center">
               <div class="col-12 col-md-6">
                 <div class="card py-md-3 px-md-1 mt-1 h-30 box-shadow-all border-0">
-                <div class="card-body"><img src="assets/img/project/sint.png" alt="" style="height:50%;"/>
+                  <div class="card-body">
+                    <br>
+                    <br>
+                    <h3 class="py-2">Programmable Packet Processing</h3>
+                    <img src="assets/img/project/sint.png" alt="" width="400" height="400""/>
+                    <h2 class="py-4">S-INT In-Band Telemetry</h2>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-12 col-md-6">
+                <div class="card py-md-3 px-md-1 mt-1 h-30 box-shadow-all border-0">
+                  <div class="card-body">
+                    <div class="card-body"><img src="assets/img/project/marl.png" alt="" width="400" height="500" />
+                    <h2 class="py-4">Multi-Agent Reinforcement Learning for Routing</h2>
+                  </div>
                 </div>
               </div>
             </div>
