--- a/public/index.html
+++ b/public/index.html
@@ -355,6 +355,47 @@
       <!-- <section> close ============================-->
       <!-- ============================================-->
 
+
+      <!-- ============================================-->
+      <!-- <section> begin ============================-->
+        <section id="papers">
+          <div class="container-xxl text-align: center">
+              <div class="row justify-content-center text-center">
+                <div class="col-lg-10 col-xl-8">
+                  <h1 class="display-6 font-cursive">Publications</h1>
+                  <p class="fs-md-1 mt-4"></p>
+                </div>
+
+                <center>
+                      <div class="card py-md-3 px-md-1 mt-3 h-30 box-shadow-all border-0 text-lg-start">        
+                    <!-- <div class="col-lg-10 col-xl-8"> -->
+                      <ol class="bibliography"><li><div class="row">
+                        <div id="9162923" class="col-sm-12">
+                            <div class="title font-weight-bold">Towards In-Band Telemetry for Self Driving Wireless Network - 
+                            <em>Janakaraj, P.</em>,Pinyoanuntapong, P.,Wang, P.,and Lee, M.
+                            <div class="periodical">
+                              <em>In IEEE INFOCOM 2020 - IEEE Conference on Computer Communications Workshops (INFOCOM WKSHPS)</em>2020
+                            </div><div class="links"></div></div>
+                      </div></li>
+                      <br>  
+                      <li><div class="row">
+                        <div id="9154266" class="col-sm-8">
+                            <div class="title font-weight-bold">FedAir: Towards Multi-hop Federated Learning Over-the-Air -
+                           Pinyoanuntapong, P.,<em>Janakaraj, P.</em>,Wang, P.,Lee, M.,and Chen, C.</div>
+                            <div class="periodical">
+                              <em>In 2020 IEEE 21st International Workshop on Signal Processing Advances in Wireless Communications (SPAWC)</em>2020
+                            </div><div class="links"></div>                          
+                        </div>
+                      </div></li>
+                    </div>
+                </div>
+              </center>
+              </div>            
+          </div>
+        </section>
+
+
+
       <!-- ============================================-->
       <!-- <section> begin ============================-->
       <!-- section>
