--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
               <li><h5>Full-Stack Realtime Programmable Data Plane</h5></li>
               <li><h5>Wireless Network Operating System (WiNOS)</h5></li>
               <li><h5>Logically Centralized Artifical Intelligence</h5></li>
-              <li><h5>Plug-and-Play Network Apps</h5></li>
+              <li><h5>Intelligent Network Apps</h5></li>
               <li><h5>Rapid Wireless Innovations</h5></li>
             </ul>
             </div>
@@ -290,19 +290,19 @@
               <h1 class="display-6 font-cursive">Testbed</h1>
             </div>
 
-            <div class="row row-cols-1 row-cols-xl-2 g-4 mt-3 text-center">
+            <div class="row row-cols-1 row-cols-xl-3 g-4 mt-3 text-center">
               <div class="col-12 col-md-6">
                 <div class="card py-md-3 px-md-1 mt-1 h-30 box-shadow-all border-0">
                   <div class="card-body">
                     <h3 class="py-2">SD-Router Version 1</h3>
                     <img src="assets/img/project/v1.png" alt="" width="200" height="300"/>
-                    <h3 class="py-4">TP-Link TL-WDR4300 / OpenWRT</h3>
+                    <h3 class="py-4">TP-LINK TL-WDR4300 / OpenWRT</h3>
                   </div>
                 </div>
               </div>
 
               <div class="col-12 col-md-6">
-                <div class="card py-md-3 px-md-2 mt-1 h-30 box-shadow-all border-0">
+                <div class="card py-md-3 px-md-1 mt-1 h-30 box-shadow-all border-0">
                   <div class="card-body">
                     <h3 class="py-2">SD-Router Version 2</h3>
                     <br>
@@ -314,29 +314,17 @@
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
-      </section>
-      <!-- <section> close ============================-->
-      <!-- ============================================-->
-      
-      <!-- ============================================-->
-      <!-- <section> begin ============================-->
-        <section class="pt-xxl-0" id="floorplan">
-          <div class="container-xxl">
-            <div class="row justify-content-center text-center">
-              <div class="col-lg-10 col-xl-8">
-            </div>
-            <div class="col-12 col-md-8" >
-              <div class="card py-md-1 px-md-1 mt-1 h-30 box-shadow-all border-0 text-center">
-                <div class="card-body">
-                  <h3 class="py-2">Floor Plan</h3>
-                  <p style="text-align:center;">
-                  <img src="assets/img/project/floor_plan.png" alt="" width="700" height="400" />
-                  <h3 class="py-2">Topology</h3>
-                </p>
+
+              <div class="col-12 col-md-6">
+                <div class="card py-md-3 px-md-1 mt-1 h-30 box-shadow-all border-0">
+                  <div class="card-body">
+                    <h3 class="py-2">Floor Plan</h3>
+                    <img src="assets/img/project/floor_plan.png" alt="" width="200" height="300"/>
+                    <h3 class="py-4">Topology</h3>
+                  </div>
                 </div>
               </div>
+
             </div>
           </div>
       </section>
@@ -471,7 +459,7 @@
         <img src="assets/img/project/nsf.png" alt="" style="float: left;" /> <br><br>
         <p><span> 
           This material is based upon work supported by the National Science Foundation 
-          under Grant No. CNS-1547353 and CNS-1763182. Any opinions, findings, and conclusions or 
+          under Grant No. CNS-2003198. Any opinions, findings, and conclusions or 
           recommendations expressed in this material are those of the author(s) and 
           do not necessarily reflect the views of the National Science Foundation.
         </span></p>
