--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
               <!-- <p class="mt-4 fs-2 fs-md-4 lh-sm">The Nx-Gen Wireless Mesh Network</p> -->
               <ul>
               <li><h5>Full-Stack Realtime Programmable Data Plane</h5></li>
-              <li><h5>Wireless Network Operating System (WiNOS)</h5></li>
-              <li><h5>Logically Centralized Artifical Intelligence</h5></li>
+              <li><h5>AI-oriented Control plane via Wireless Network Operating System (WiNOS)</h5></li>
+              <li><h5>AI-enabled Autonomous System Control and Optimization</h5></li>
               <li><h5>Plug-and-Play Network Apps</h5></li>
               <li><h5>Rapid Wireless Innovations</h5></li>
             </ul>
@@ -247,7 +247,7 @@
               <div class="col-12 col-md-6">
                 <div class="card py-md-3 px-md-1 mt-1 h-30 box-shadow-all border-0">        
                   <div class="card-body"><img src="assets/img/project/winos.png" alt="" width="400" height="500" />
-                    <h2 class="py-3">Wirelesss Network Operating System</h2>
+                    <h2 class="py-3">AI-oriented Control plane via Wireless Network Operating System </h2>
                   </div>
                 </div>
               </div>
